test_case/rust-lang_rust/33997_222858143.rs
 rust
extern crate doesnt_exist; //~ ERROR can't find crate
fn main() {}
